# simple-weather-forecast

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml
.streamlit/: config.toml
